--- a/src/main/resources/static/assets/css/admin.css
+++ b/src/main/resources/static/assets/css/admin.css
@@ -1,19 +1,24 @@
 /* 
 ---------------------------------------------
-community insert Board & update Board Style
+a link Style
 --------------------------------------------- 
 */ 
-
 a {
 	color: #080808;;
 	text-decoration: none !important;
 	font-weight: bold;
-	font-size: 18px;
+	font-size: 17px;
 }
 
 a:hover {
 	color: #587D84;
 }
+
+/* 
+---------------------------------------------
+community insert & update Style
+--------------------------------------------- 
+*/ 
 
 .insert {
   width: 100%;
@@ -141,3 +146,17 @@ a:hover {
   background-color: #fff;
   color: #1e1e1e;
 }
+
+/* 
+---------------------------------------------
+image Style
+--------------------------------------------- 
+*/ 
+
+.image-upload-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px; 
+}
+
