--- a/src/main/resources/templates/fragments/adminmid.html
+++ b/src/main/resources/templates/fragments/adminmid.html
@@ -54,9 +54,10 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                               		<a class="nav-link" th:href="@{/#}">게시판 관리</a>
+                               		<a class="nav-link" th:href="@{/boardList}">게시판 관리</a>
+                               		<a class="nav-link" th:href="@{/qnaBoardList}">Q&A 답변</a>
                                     <a class="nav-link" th:href="@{/#}">자주하는 질문</a>
-                                    <a class="nav-link" th:href="@{/#}"></a>
+                                   
                                     <a class="nav-link" th:href="@{/#}"></a>
                                 </nav>
                             </div>
