--- a/src/main/resources/templates/layout/admin/boardList.html
+++ b/src/main/resources/templates/layout/admin/boardList.html
@@ -3,6 +3,18 @@
 <head>
 <!-- header 입니다. -->
 <th:block th:replace="fragments/adminheader :: adminheader"></th:block>
+<style>
+      
+a {
+	color: #080808;;
+	text-decoration: none !important;
+	font-size: 15px;
+}
+
+a:hover {
+	color: #587D84;
+	}
+    </style>
 </head>
 <body class="sb-nav-fixed">
 
@@ -40,7 +52,7 @@
 								<tbody>
 									<tr th:each="board, state : ${boardList}">
 										<td th:text="${board.b_seq}"></td>
-										<td><a th:href="@{/gopost(b_seq=${board.b_seq})}" th:text="${board.title}"></a></td>
+										<td><a th:href="@{/gopost(b_seq=${board.b_seq})}" th:text="${board.title}" target="_blank"></a></td>
 										<td th:text="${board.member.id}"></td>
 										<td th:text="${board.b_category}"></td>
 										<td th:text="${board.cnt}"></td>
