--- a/src/main/resources/templates/layout/admin/getTVProgramList.html
+++ b/src/main/resources/templates/layout/admin/getTVProgramList.html
@@ -3,6 +3,18 @@
 <head>
 <!-- header 입니다. -->
 <th:block th:replace="fragments/adminheader :: adminheader"></th:block>
+<style>
+      
+a {
+	color: #080808;;
+	text-decoration: none !important;
+	font-size: 15px;
+}
+
+a:hover {
+	color: #587D84;
+	}
+    </style>
 </head>
 <body class="sb-nav-fixed">
 
