--- a/src/main/resources/templates/layout/admin/qnaBoardList.html
+++ b/src/main/resources/templates/layout/admin/qnaBoardList.html
@@ -3,6 +3,18 @@
 <head>
 <!-- header 입니다. -->
 <th:block th:replace="fragments/adminheader :: adminheader"></th:block>
+<style>
+      
+a {
+	color: #080808;;
+	text-decoration: none !important;
+	font-size: 15px;
+}
+
+a:hover {
+	color: #587D84;
+	}
+    </style>
 </head>
 <body class="sb-nav-fixed">
 
@@ -16,39 +28,36 @@
 				<div class="container-fluid px-4">
 					<h1 class="mt-4">용용플레이</h1>
 					<ol class="breadcrumb mb-4">
-						<li class="breadcrumb-item active">게시판 관리</li>
+						<li class="breadcrumb-item active">Q&A 관리</li>
 					</ol>
 
 					<div class="card mb-4">
 						<div class="card-header">
-							<i class="fas fa-table me-1"></i>전체 게시물
+							<i class="fas fa-table me-1"></i>Q&A 게시물
 						</div>
 						<div class="card-body">
-							<table id="boardTable">
+							<table id="qnaTable">
 								<thead>
 									<tr>
-										<th>번호</th>
+										<th>번호</th>									
 										<th>제목</th>
 										<th>작성자</th>
-										<th>게시글 항목</th>
-										<th>조회수</th>
 										<th>추천수</th>
-										<th>신고수</th>
-										<th>등록일</th>																	
+										<th>신고수</th>	
+										<th>답변 상태</th>																
 									</tr>
 								</thead>
 								<tbody>
-									<tr th:each="board, state : ${boardList}">
-										<td th:text="${board.b_seq}"></td>
-										<td><a th:href="@{/gopost(b_seq=${board.b_seq})}" th:text="${board.title}"></a></td>
-										<td th:text="${board.member.id}"></td>
-										<td th:text="${board.b_category}"></td>
-										<td th:text="${board.cnt}"></td>
-										<td th:text="${board.b_like}"></td>
-										<td th:text="${board.report}"></td>	
-										<td th:text="${board.write_date}"></td>	
-									</tr>
-								</tbody>
+									<tr th:each="qna, state: ${qna}">
+										<td th:text="${qna.b_seq}"></td>										
+										<td><a th:href="@{/gopost(b_seq=${qna.b_seq})}" th:text="${qna.title}" target="_blank"></a></td>
+										<td th:text="${qna.member.name}"></td>
+										<td th:text="${qna.b_like}"></td>
+										<td th:text="${qna.report}"></td>
+										<td th:if="${qna.replies != null and not #lists.isEmpty(qna.replies)}">답변완료</td>
+										<td th:unless="${qna.replies != null and not #lists.isEmpty(qna.replies)}">답변미완료</td>
+								</tr>
+							</tbody>
 							</table>
 						</div>
 					</div>
