--- a/src/main/resources/templates/layout/member/find_id.html
+++ b/src/main/resources/templates/layout/member/find_id.html
@@ -1,37 +1,69 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
+<th:block th:replace="fragments/header :: header"></th:block>
+
 <head>
-	<meta charset="UTF-8">
-	<title>아이디 찾기</title>
-	<script type="text/javascript">
-		// 아이디 찾기
-		function check_find_id() {
-			// 이름랑 이메일
-			var phone_numberValue = document.getElementById("phone_number").value;
-			var emailValue = document.getElementById("email").value;
-			// 이메일과 아이디를 모두 확인하려면 URL에 두 값을 추가
-			var url = "check_find_id?phone_number=" + phone_numberValue + "&email=" + emailValue;
-			console.log(url); // 확인을 위한 로그
-			// 새 창으로 열기
-			window.open(url, "_blank", "width=400,height=300");
-		}		 
-	</script>
+<meta charset="UTF-8">
+<title>아이디 찾기</title>
+<script type="text/javascript">
+	// 아이디 찾기
+	function check_find_id() {
+		// 이름랑 이메일
+		var phone_numberValue = document.getElementById("phone_number").value;
+		var emailValue = document.getElementById("email").value;
+		// 이메일과 아이디를 모두 확인하려면 URL에 두 값을 추가
+		var url = "check_find_id?phone_number=" + phone_numberValue + "&email="
+				+ emailValue;
+		console.log(url); // 확인을 위한 로그
+		// 새 창으로 열기
+		window.open(url, "_blank", "width=400,height=300");
+	}
+</script>
 </head>
 <body>
-    <h2>아이디 찾기 페이지</h2>
-    <form th:action="@{/find_id}" method="post" name="fr">
-        <label>이메일</label>
-        <input type="email" name="email" id="email">
-        <label>핸드폰 번호</label>
-        <input type="text" name="phone_number" id="phone_number">
-        <input type="button" value="아이디 찾기" onclick="check_find_id()"><br><br>
-        찾은 아이디
-       <input type="text" name="id" id="id" readonly>
-    </form>
-    
-    
-    <a th:href="@{/login}">로그인 페이지로</a>
-    <a th:href="@{/find_pwd}">비밀번호 찾기</a>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="page-content">
+					<!-- 아이디 찾기 페이지 시작 -->
+					<div class="modify">
+						<div class="col-lg-8">
+							<div class="modify modify-section">
+								<div class="heading-section">
+									<h2>아이디 찾기</h2>
+									<h5>이메일과 핸드폰번호를 입력해주세용.</h5>									
+								</div>
+								<div class="form-section">
+
+									<form th:action="@{/find_id}" method="post" name="fr">
+										<div class="input_block">
+											<h5>이메일</h5>
+											<input type="email" name="email" id="email">
+										</div>
+										<div class="input_block">
+											<h5>핸드폰 번호</h5>
+											<input type="text" name="phone_number" id="phone_number">
+										</div>
+										<input  class="signin_btn" type="button" value="아이디 찾기" onclick="check_find_id()"><br>
+
+										<div class="input_block">
+											<h5>찾은 아이디</h5>
+											<input type="text" name="id" id="id" readonly>
+										</div>										
+									</form>
+									<a th:href="@{/login}">로그인</a> &nbsp; &nbsp; 
+										<a th:href="@{/find_pwd}">비밀번호 찾기</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- footer -->
+   <th:block th:replace="fragments/footer :: footer"></th:block>
 </body>
 </html>
