관람등급, position에 따른 컨텐츠 이용 제한 기능 구현

--- a/src/main/resources/templates/layout/contents/moviedetail.html
+++ b/src/main/resources/templates/layout/contents/moviedetail.html
@@ -18,9 +18,9 @@
                      <h6>[[${movie.open_year}]] &nbsp; [[${movie.running_time}]]분 &nbsp; [[${movie.genre}]]</h6>
                    </div>
                    <div class="play">
-					    <a th:href="'https://www.youtube.com/watch?v=' + ${movie.video_path}" target="_blank">
+					    <span th:onclick="goMovieVideo([[${movie}]], [[${member}]])">
 							<p class="play-text">재생하기</p>
-				   		</a>
+				   		</span>
 				   </div>
                  </div>
                </div>
