--- a/src/main/resources/templates/fragments/adminmid.html
+++ b/src/main/resources/templates/fragments/adminmid.html
@@ -57,19 +57,14 @@
                                		<a class="nav-link" th:href="@{/boardList}">게시판 관리</a>
                                		<a class="nav-link" th:href="@{/qnaBoardList}">Q&A 답변</a>
                                     <a class="nav-link" th:href="@{/#}">자주하는 질문</a>
-                                   
-                                    <a class="nav-link" th:href="@{/#}"></a>
                                 </nav>
                             </div>
-                            <div class="sb-sidenav-menu-heading">Addons</div>
-                            <a class="nav-link" href="charts.html">
+                            <div class="sb-sidenav-menu-heading">Member</div>
+                            <a class="nav-link" th:href="@{/getMemberList}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                                Charts
+                                회원관리
                             </a>
-                            <a class="nav-link" href="tables.html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                                Tables
-                            </a>
+                           
                         </div>
                     </div>
                     <div class="sb-sidenav-footer">
