--- a/src/main/resources/templates/layout/member/login.html
+++ b/src/main/resources/templates/layout/member/login.html
@@ -28,8 +28,7 @@
 											<input type="password" name="password" placeholder="Password" />
 										</div>
 										<div class="link-block">
-											<a href="join">회원가입</a> &nbsp; &nbsp; <a href="find_id">아이디/비밀번호
-												찾기</a>
+											<a href="join">회원가입</a> &nbsp; &nbsp; <a href="find_id">아이디 /</a><a href="find_pwd"> 비밀번호 찾기</a>
 										</div>
 										<button class="signin_btn" type="submit">로그인</button>
 									</form>
